fix weird non-responsive footer spacing

--- a/frontend/src/styles/variables.scss
+++ b/frontend/src/styles/variables.scss
@@ -12,7 +12,7 @@ $alt-dark: #5f6368;
 $alt-grey: #bdbdbd;
 
 // default settings
-$footer-size: 300px;
+$footer-size: 10rem;
 $max-width: 800px;
 
 // default material breakpoints
